--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/drools?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&useSSL=false&noAccessToProcedureBodies=true
-spring.datasource.password=123456
-spring.datasource.username=root
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.profiles.active=default
+spring.datasource.hikari.dataSourceClassName=com.mysql.jdbc.Driver
+spring.datasource.hikari.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.hikari.jdbcUrl=jdbc:mysql://localhost:3306/drools?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&useSSL=false&noAccessToProcedureBodies=true
+spring.datasource.hikari.password=123456
+spring.datasource.hikari.username=root
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
 
