修改配置， 重新启动

--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,12 @@
             <artifactId>springfox-swagger2</artifactId>
             <version>${springfox.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-maven-plugin</artifactId>
+            <version>3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
