--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
-spring.profiles.active=default
-spring.datasource.hikari.dataSourceClassName=com.mysql.jdbc.Driver
-spring.datasource.hikari.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.hikari.jdbcUrl=jdbc:mysql://localhost:3306/drools?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&useSSL=false&noAccessToProcedureBodies=true
-spring.datasource.hikari.password=123456
-spring.datasource.hikari.username=root
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/drools?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.hikari.health-check-registry=true
+spring.datasource.hikari.maximum-pool-size=50
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.hikari.data-source-class-name=MySql
 
 
+
+#--------------------------  flyway≈‰÷√---------------------
+spring.flyway.baselineOnMigrate=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.placeholder-prefix=V
+spring.flyway.sql-migration-suffix=.sql
